# deribit-analyzer

./: .env.example  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  tui.rs
src/alert/: notifier.rs
src/analysis/: box_spread.rs  calendar_arb.rs  calendar_spread.rs  conversion.rs  mod.rs  opportunity.rs  portfolio.rs  put_call_parity.rs  vertical_arb.rs  vol_surface.rs
src/events/: bus.rs
src/market/: instruments.rs  mod.rs  orderbook.rs  subscriber.rs  ticker.rs  trades.rs
src/storage/: sqlite.rs
src/ws/: auth.rs  client.rs  mod.rs  rate_limiter.rs
